force-app/main/default/objects/B25__Service_Reservation__c/B25__Service_Reservation__c.object-meta.xml
<CustomObject>
    <description>Represents a Service that is included on a Reservation.</description>
    <label>Service Reservation</label>
    <nameField>
        <displayFormat>SR-{000000000}</displayFormat>
        <label>Service Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>