force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Key__c.field-meta.xml
<CustomField>
    <fullName>B25__Key__c</fullName>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>