force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Notes__c.field-meta.xml
<CustomField>
    <fullName>B25__Notes__c</fullName>
    <description>Additional notes on the Reservation form regarding a Service.</description>
    <inlineHelpText>Notes supplémentaires concernant un service.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>