force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Quantity__c.field-meta.xml
<CustomField>
    <fullName>B25__Quantity__c</fullName>
    <description>The quantity of the Service for a Reservation.</description>
    <inlineHelpText>Utilisez cet élément pour spécifier la quantité souhaitée du service.</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>