force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Reservation__c.field-meta.xml
<CustomField>
    <fullName>B25__Reservation__c</fullName>
    <description>The Reservation record to which a Service Reservation record belongs.</description>
    <inlineHelpText>La réservation à laquelle appartient cette réservation de service.</inlineHelpText>
    <label>Reservation</label>
    <referenceTo>B25__Reservation__c</referenceTo>
    <relationshipLabel>Service Reservations</relationshipLabel>
    <relationshipName>ServiceReservations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>