force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Service__c.field-meta.xml
<CustomField>
    <fullName>B25__Service__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Service record the Service Reservation record is for.</description>
    <inlineHelpText>Le service pour lequel cette réservation de service est faite.</inlineHelpText>
    <label>Service</label>
    <referenceTo>B25__Service__c</referenceTo>
    <relationshipLabel>Service Reservations</relationshipLabel>
    <relationshipName>Service_Reservations</relationshipName>
    <type>Lookup</type>
</CustomField>