force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Subtotal__c.field-meta.xml
<CustomField>
    <fullName>B25__Subtotal__c</fullName>
    <description>This is shown on the Reservation form and equals quantity of the Service times the price of the Service.</description>
    <formula>B25__Quantity__c *  B25__Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cela équivaut à la quantité du service multipliée par le prix du service.</inlineHelpText>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>