force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Time__c.field-meta.xml
<CustomField>
    <fullName>B25__Time__c</fullName>
    <description>Use this field to define at what time a Service is expected to be delivered.</description>
    <inlineHelpText>Utilisez ce champ pour définir à quelle heure un service est censé être livré.</inlineHelpText>
    <label>Time</label>
    <type>DateTime</type>
</CustomField>