force-app/main/default/objects/B25__Service_Reservation__c/fields/B25__Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>B25__Unit_Price__c</fullName>
    <description>The price of a Service.</description>
    <inlineHelpText>Le prix d’un service.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>